<resources>
    <string name="app_name">TDFN Zscore Calculator</string>
    <string name="hello_world">3D Formal Norms Z Score Calculator</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="combined">Combined</string>
    <string name="helpbutton">Help</string>
    <string name="infobutton">Information</string>
    <string name="backbutton">Back</string>
    <string name="picturename">Measurement</string>
    <string name="measurementsbutton">Measurements</string>
    <string name="nextbutton">Next</string>
    <string name="homebutton">Home</string>
    <string name="zscoreplot">Z Score plot</string>
    <string name="getzscore">Get Z Score</string>
    <string name="zscore">Z Score</string>
    <string name="measurementname">maxcranwidth</string>
    <string name="measurementhint">millimeters</string>
    <string name="age">3</string>
    <string name="ageparam">Age</string>
    <string name="sexparam">Sex</string>
    <string name="sex">male</string>
    <string name="measurement">measurement</string>
    <string name="action_settings">Settings</string>
    <string name="maximumcranialwidthhint">131&#8211;169mm</string>
    <string name="cranialbasewidthhint">117&#8211;165mm</string>
    <string name="cutaneouslowerlipheighthint">3&#8211;20mm</string>
    <string name="intercanthalwidthhint">23&#8211;39mm</string>
    <string name="labialfissurewidthhint">28&#8211;63mm</string>
    <string name="lowerfacialdepthlefthint">102&#8211;170mm</string>
    <string name="lowerfacialdepthrighthint">105&#8211;174mm</string>
    <string name="lowerfacialheighthint">49&#8211;88mm</string>
    <string name="lowerlipheighthint">6&#8211;25mm</string>
    <string name="lowervermilionheighthint">1&#8211;10mm</string>
    <string name="mandibularwidthhint">69&#8211;130mm</string>
    <string name="maximumcraniallengthhint">161&#8211;219mm</string>
    <string name="maximumfacialwidthhint">107&#8211;159mm</string>
    <string name="middlefacialdepthlefthint">94&#8211;148mm</string>
    <string name="middlefacialdepthrighthint">97&#8211;149mm</string>
    <string name="minimumfrontalwidthhint">77&#8211;128mm</string>
    <string name="morphologicalfacialheighthint">85&#8211;143mm</string>
    <string name="nasalalalengthlefthint">21&#8211;43mm</string>
    <string name="nasalalalengthrighthint">20&#8211;42mm</string>
    <string name="nasalbridgelengthhint">27&#8211;59mm</string>
    <string name="nasalheighthint">32&#8211;69mm</string>
    <string name="nasalprotrusionhint">12&#8211;27mm</string>
    <string name="nasalwidthhint">22&#8211;46mm</string>
    <string name="outercanthalwidthhint">67&#8211;99mm</string>
    <string name="palpebralfissurelengthlefthint">21&#8211;33mm</string>
    <string name="palpebralfissurelengthrighthint">21&#8211;33mm</string>
    <string name="philtrumlengthhint">10&#8211;24mm</string>
    <string name="philtrumwidthhint">6&#8211;19mm</string>
    <string name="subnasalwidthhint">9&#8211;29mm</string>
    <string name="upperfacialdepthlefthint">92&#8211;139mm</string>
    <string name="upperfacialdepthrighthint">95&#8211;140mm</string>
    <string name="upperfacialheighthint">50&#8211;91mm</string>
    <string name="upperlipheighthint">15&#8211;29mm</string>
    <string name="uppervermilionheighthint">3&#8211;10mm</string>
    <string name="minimumfrontalwidth"><b>Minimum Frontal Width (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nRight Frontotemporale (ft_r): The most medial projecting point situated along the temporal crest of the frontal bone.\nLeft Frontotemporale (ft_l): Same as above.\n<u>Measurement Description</u>\nMinimum frontal width is a transversely-oriented measurement of forehead width, taken at the most medial point along the curves created by left and right temporal crests of the frontal bone. Other common names for this measurement include: forehead width/breadth and bifrontal width/breadth.\n<u>Measurement Method</u>\nTraditional anthropometry with a spreading caliper. Using the index fingers, the forehead is palpated until the temporal crests are located. Using moderate pressure, the tips of the caliper are then applied to the forehead along the most medial aspect of each crest, taking care to not allow the tips of the caliper to slip posterior into the temporal fossae.</string>
    <string name="mandibularwidth"><b>Mandibular Width (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nRight Gonion (go_r): The most lateral point at the gonial/mandibular angle.\nLeft Gonion (go_l): Same as above.\n<u>Measurement Description</u>\nTransversely-oriented measurement designed to capture the width of the mandible at the level of the gonial angles. Other common names for this measurement include: mandible width/breadth and bigonial width/breadth\n<u>Measurement Method</u>\nTraditional anthropometry with a spreading caliper. With the subject\'s head tilted slightly back, the gonial angles of the mandible are first located through palpation. Using moderate to heavy pressure, the tips if the caliper are then applied through the dense soft tissue overlying the gonial angles until they sit on the bone. It is often helpful to start with the caliper\'s tips situated just behind/below the angle and then move the tips slowly forward/upward until they slip laterally onto the surface of the angle. The tips of the caliper are then moved back and forth slightly until the highest reading is observed on the caliper\'s scale.</string>
    <string name="maximumcranialwidth"><b>Maximum Cranial Width (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nRight Euryon (eu_r): The most lateral point on the parietal region of the head.\nLeft Euryon (eu_l): Same as above.\n<u>Measurement Description</u>\nThis measurement attempts to capture the widest transverse dimension of the skull vault, which is typically located between the left and right parietal bones. Other common names for this measurement include: maximum head width/breadth and biparietal width/breadth.\n<u>Measurement Method</u>\nTraditional anthropometry with a spreading caliper. Using moderate pressure, the tips of the caliper are applied to the scalp in the region of the skull vault just above the ears. Maintaining constant pressure, the operator moves the tips of the caliper inferior/superior and anterior/posterior in an alternating manner, exploring the entire parietal region until the highest reading is observed on the caliper\'s scale.</string>
    <string name="maximumcraniallength"><b>Maximum Cranial Length (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nGlabella (g): The most anterior midline point on the frontal bone situated between the supraorbital ridges.\nOpisthocranion (op): The most posterior midline point on the occipital bone, as defined in relation to the glabella.\n<u>Measurement Description</u>\nThis measurement attempts to capture the longest dimension of the skull vault along the anterior-posterior axis. Other common names for this measurement include: maximum head length; head length; cranial length; and glabello-occipital length.\n<u>Measurement Method</u>\nTraditional anthropometry with a spreading caliper. This measurement is best taken with the subject looking forward and the operator standing to one side, such that the head is viewed in profile. Using moderate pressure, one tip of the caliper is held firmly against the glabella while the other tip is slip along the occiput in the midline until the highest reading is observed on the caliper\'s scale.</string>
    <string name="maximumfacialwidth"><b>Maximum Facial Width (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nRight Zygion (zy_r): The most lateral point on the zygomatic arch. As such, this landmark may be located on the zygomatic process of the temporal bone.\nLeft Zygion (zy_l): Same as above.\n<u>Measurement Description</u>\nThis measurement attempts to capture the widest transverse dimension of the upper face. Other common names for this measurement include: facial width/breadth; upper facial width/breadth; and bizygomatic width/breadth\n<u>Measurement Method</u>\nTraditional anthropometry with a spreading caliper. Facing directly in front of the subject, the operator first palpates the extent of the zygomatic arch. Using moderate pressure, the tips of the calipers are applied to the skin at roughly the mid-point of the arch. The operator then moves the tips of the caliper in an alternating fashion, back and forth and up and down, exploring the entire arch until the highest reading is observed on the caliper\'s scale.</string>
    <string name="cranialbasewidth"><b>Cranial Base Width (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nRight Tragion (t_r): Point marking the notch at the superior margin of the tragus, where the cartilage meets the skin of the face.\nLeft Tragion (t_l): Same as above.\n<u>Measurement Description</u>\nA transverse measurement designed to approximate the width of the cranial base at the level of the middle cranial fossa. Other common names for this measurement include: basicranial width/breadth; skull base width/breadth; biauricular distance; and bitragion diameter.\n<u>Measurement Method</u>\nInter-landmark distance calculated from 3D stereophotogrammetry.</string>
    <string name="upperfacialdepthright"><b>Upper Facial Depth Right (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nNasion (n): Midline point where the frontal and nasal bones contact (nasofrontal suture). Soft tissue nasion corresponds to the underlying bony landmark.\nRight Tragion (t_r): Point marking the notch at the superior margin of the tragus, where the cartilage meets the skin of the face.\n<u>Measurement Description</u>\nA measurement designed to capture the depth or projection of the upper third of the face. Other common names for this measurement include: upper third facial depth and tragio-nasal distance.\n<u>Measurement Method</u>\nInter-landmark distance calculated from 3D stereophotogrammetry.</string>
    <string name="upperfacialdepthleft"><b>Upper Facial Depth Left (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nNasion (n): Midline point where the frontal and nasal bones contact (nasofrontal suture). Soft tissue nasion corresponds to the underlying bony landmark.\nLeft Tragion (t_l): Point marking the notch at the superior margin of the tragus, where the cartilage meets the skin of the face.\n<u>Measurement Description</u>\nA measurement designed to capture the depth or projection of the upper third of the face. Other common names for this measurement include: upper third facial depth and tragio-nasal distance.\n<u>Measurement Method</u>\nInter-landmark distance calculated from 3D stereophotogrammetry.</string>
    <string name="middlefacialdepthright"><b>Middle Facial Depth Right (European Caucasian)</b>\n\n<u>Landmarks Involved</u>\nSubnasale (sn): Midline point marking the junction between the inferior border of the nasal septum and the cutaneous upper lip. It is the apex of the nasolabial angle.\nRight Tragion (t_r): Point marking the notch at the superior margin of the tragus, where the cartilage meets the skin of the face.\n<u>Measurement Description</u>\nA measurement designed to capture the depth or projection of the middle third of the face (midface). Other common names for this measurement include: midfacial/midface depth; middle third facial depth; and tragio-subnasal distance.\n<u>Measurement Method</u>\nInter-landmark distance calculated from 3D stereophotogrammetry.</string>
</resources>