<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TDFNZscoreCalculator">

    <ScrollView
        android:id="@+id/layout_top"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_world" />

            <Button
                android:id="@+id/btn_getzscore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:onClick="onClickZscore"
                android:text="@string/getzscore" />

            <Button
                android:id="@+id/btn_measurements"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_getzscore"
                android:onClick="onClickMeasurements"
                android:text="@string/measurementsbutton" />

            <Button
                android:id="@+id/btn_getinfo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_measurements"
                android:onClick="onClickNotes"
                android:text="@string/infobutton" />

            <TextView
                android:id="@+id/txt_InfoAndHelp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_getinfo"
                android:text="@string/info"
                android:visibility="invisible" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
