<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableRow>

                    <Button
                        android:id="@+id/btn_picturebuttonback"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickPictureback"
                        android:text="@string/backbutton" />

                    <Button
                        android:id="@+id/btn_picturebutton"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickPicture"
                        android:text="@string/nextbutton" />

                    <Button
                        android:id="@+id/btn_home"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:onClick="onClickHome"
                        android:text="@string/homebutton" />
                </TableRow>
            </TableLayout>

            <ImageView
                android:id="@+id/image1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center" />

            <TextView
                android:id="@+id/txt_picture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/picturename" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
